--- a/plugin.xml
+++ b/plugin.xml
@@ -14,7 +14,29 @@
       <config-file target="*-Info.plist" parent="NSAppTransportSecurity">
           <dict>
               <key>NSAllowsArbitraryLoads</key>
-              <true/>
+              <false/>
+              <key>NSExceptionDomains</key>
+            <dict>
+                <key>vayrenhat.com</key>
+                <dict>
+                    <key>NSIncludesSubdomains</key>
+                    <true/>
+                    <key>NSExceptionAllowsInsecureHTTPLoads</key>
+                    <true/>
+                    <key>NSExceptionRequiresForwardSecrecy</key>
+                    <false/>
+                    <key>NSExceptionMinimumTLSVersion</key>
+                    <string>TLSv1.0</string>
+                    <key>NSThirdPartyExceptionAllowsInsecureHTTPLoads</key>
+                    <true/>
+                    <key>NSThirdPartyExceptionRequiresForwardSecrecy</key>
+                    <false/>
+                    <key>NSThirdPartyExceptionMinimumTLSVersion</key>
+                    <string>TLSv1.0</string>
+                    <key>NSRequiresCertificateTransparency</key>
+                    <false/>
+                </dict>
+            </dict>
           </dict>
       </config-file>
     </platform>
